<resources>
    <string name="app_name">Dmmsu Grade Level App</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="student">STUDENT</string>
    <string name="teacher">TEACHER</string>
    <string name="account_type">Account Type</string>
    <string name="fullname">Fullname</string>
    <string name="user_info">User Info</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_class_yet">No Class yet!</string>
    <string name="activities">Activities</string>
    <string name="no_activities_yet">No activities yet!</string>
    <string name="my_classes">My Classes</string>
    <string name="data_structure_and_algorithm">Data Structure and algorithm</string>
    <string name="start">Start</string>
    <string name="background">background</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="create_class">Create Class</string>
    <string name="activity_title">Activity Title</string>
    <string name="activity_description">Activity Description</string>
    <string name="create_activity">CREATE Activity</string>
    <string name="description">Description</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="points">Points</string>
    <string name="choice">Choice</string>
    <string name="s">answer:</string>
    <string name="choices">choices:</string>
    <string name="add_question">ADD QUESTION</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="create_lesson">Create Lesson</string>
    <string name="content">Content</string>
    <string name="delete">Delete</string>
    <string name="activity">Activity</string>
    <string name="edit">edit</string>
    <string name="lesson">Lesson</string>
    <string name="students">Students</string>
    <string name="_10_03_2023">10/03/2023</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="join_class">Join class</string>
    <string name="join">Join</string>
    <string name="enter_class_id">enter class id</string>
    <string name="class_id_is_provided_by_your_teacher">Class id is provided by your teacher.</string>
    <string name="schedule">Schedule</string>
    <string name="pick_start_time">Pick start time</string>
    <string name="start_time">Start Time</string>
    <string name="set_start_time">set start time</string>
    <string name="end_time">End time</string>
    <string name="set_end_time">Set end time</string>
    <string name="monday">MONDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="_12_00_01_00_am">12:00 - 01:00 AM</string>
    <string name="_0">+0</string>
    <string name="students_joined_the_class">students joined the class</string>
    <string name="no_students_yet">No students yet!</string>
    <string name="more_student_joined_the_class">more student joined the class</string>
    <string name="share_code">Share code</string>
    <string name="search_class_here">Search Class here..</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account">Account</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="classes">Classes</string>
    <string name="input_code_here">Input code here</string>
    <string name="your_classes">Your classes</string>
    <string name="cancel">cancel</string>
    <string name="create">Create</string>
    <string name="classroom_name">Classroom name</string>
    <string name="questions">Questions</string>
    <string name="respondents">Respondents</string>
    <string name="test_answer">test answer</string>
    <string name="start_activity">Start Activity</string>
    <string name="your_answer">Your answer</string>
    <string name="_75">75%</string>
    <string name="update">update</string>
    <string name="active_students">Active Students</string>
    <string name="dmmsu_grade_level_app">DMMSU Grade Level App</string>
    <string name="word_hunt">WORD HUNT</string>
    <string name="fill_in_the_blank">FILL IN THE BLANK</string>
    <string name="add_timer_here">add timer here</string>
    <string name="_1_min">1 min</string>
    <string name="attemps">Attemps: </string>
    <string name="highest">Highest Score: </string>
    <string name="image_multiple_choice">IMAGE MULTIPLE CHOICE</string>
</resources>