<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardActivity"
    android:layout_margin="5dp"
    android:elevation="0dp"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="16sp"/>


            <TextView
                android:id="@+id/textType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:text="@string/_10_03_2023"/>

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/textCreatedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:fontFamily="@font/poppins"
            android:text="@string/_10_03_2023"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box2"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions"
                android:layout_weight="1"
                android:id="@+id/textQuestion"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:layout_weight="1"
                android:id="@+id/textPoints"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/ic_clock"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_min"
                    android:id="@+id/textTime"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>