<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFEEFC"
    tools:context=".views.auth.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:id="@+id/imageProfile"
            android:layout_height="100dp"
            android:background="@color/black"
            android:contentDescription="@string/profile" />
        <ImageButton
            android:id="@+id/buttonAddImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_baseline_add_photo_alternate_24"
            android:contentDescription="Add Image" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_info"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputName"
            android:background="@drawable/search_bg_2"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:hint="Your name"
            android:drawableTint="#6A5AE0"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_type"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/student"/>
            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/teacher"/>
        </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputEmail"
            android:background="@drawable/search_bg_2"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:hint="Your Email Address"
            android:drawableTint="#6A5AE0"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputPassword"
            android:background="@drawable/search_bg_2"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:hint="Your Password"
            android:drawableTint="#6A5AE0"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputConfirmPassword"
            android:background="@drawable/search_bg_2"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:hint="Confirm Password"
            android:drawableTint="#6A5AE0"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:textColor="@color/black"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="10dp"
        app:backgroundTint="#6A5AE0"
        android:fontFamily="@font/poppins"
        android:text="@string/register"
        android:textAllCaps="false"
        app:cornerRadius="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:id="@+id/buttonLogin"
        android:textAllCaps="false"
        android:textColor="#6A5AE0"
        android:fontFamily="@font/poppins_semibold"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/already_have_an_account_login"/>
</LinearLayout>