<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardLesson"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#eeedec"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/textDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/description"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/layoutActions"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="#C8E6C9"
                    app:icon="@drawable/ic_baseline_add_24"
                    android:text="@string/activity"
                    android:textAllCaps="false"
                    android:id="@+id/fabCreateActivity"
                    app:elevation="0dp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="#388E3C"
                    android:textSize="12sp"
                    app:backgroundTint="#00796B"
                    android:elevation="0dp"
                    app:iconTint="#388E3C" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:elevation="0dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="#D32F2F"
                    android:tint="@color/purple_500"
                    android:id="@+id/fabDeleteLesson"
                    app:backgroundTint="#EF9A9A"
                    app:elevation="0dp"
                    android:textSize="12sp"
                    app:icon="@drawable/ic_baseline_delete_24"
                    app:iconTint="#D32F2F" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/edit"
                    android:id="@+id/fabViewLesson"
                    android:elevation="0dp"
                    android:fontFamily="@font/poppins_light"
                    android:text=""
                    android:textSize="12sp"
                    app:backgroundTint="#B2EBF2"
                    app:elevation="0dp"
                    app:icon="@drawable/ic_edit"
                    app:iconTint="#0097A7" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>