<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_margin="10dp"
    android:id="@+id/card"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nobackground">
        <ImageView
            android:id="@+id/classroomBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textClassroomName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_black"
                android:text="@string/data_structure_and_algorithm"
                android:textColor="@color/white"
                android:textSize="20sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/profile_placeholder"
                            android:id="@+id/teacherProfile"/>
                        <TextView
                            android:layout_gravity="start"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_light"
                            android:layout_margin="5dp"
                            android:id="@+id/textTeacher"
                            android:text="@string/juan_dela_cruz"/>



                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cornerRadius="20dp"
                        android:id="@+id/buttonJoin"
                        android:text="@string/join" />

                </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</com.google.android.material.card.MaterialCardView>