<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
 >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            android:padding="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/textQuestion"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/textMaxScore"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/textDesc"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/poppins_light"
                android:textSize="12sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageQuestion"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioGroup"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtAnswer"
                android:hint="@string/your_answer"
                />
        </LinearLayout>
</LinearLayout>